Bug fixing on $spacing. Release version 1.7.13 !

--- a/css/core/skins/default/_defaults.scss
+++ b/css/core/skins/default/_defaults.scss
@@ -1,10 +1,10 @@
 $defaults-default: (
-		spacing: 1.6em,
+		spacing: 1.6rem,
 		border-radius: 1px,
 		box-shadow-color: rgba(0, 0, 0, .2),
-		box-shadow-h-offset: .2em,
-		box-shadow-v-offset: .2em,
-		box-shadow-blur: .2em,
+		box-shadow-h-offset: .2rem,
+		box-shadow-v-offset: .2rem,
+		box-shadow-blur: .2rem,
 		box-shadow-spread: false,
 		box-shadow-inset: false,
 		ranking-scale: 5,
